--- a/testing/cp-testUser.yaml
+++ b/testing/cp-testUser.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: default
 rules:
   - apiGroups: ["kubeportal.ibm.com"]
-    resources: ["remoteUsers"]
+    resources: ["virtualUsers"]
     resourceNames: ["testUser"]
     verbs: ["use"]
 ---
